Add noarch task list

--- a/provisioning/roles/awx/tasks/main.yml
+++ b/provisioning/roles/awx/tasks/main.yml
@@ -3,11 +3,4 @@
 - include_tasks: debian.yml
   when: ansible_os_family == "Debian"
 
-- name: Install required Python dependencies
-  pip:
-    executable: /usr/bin/pip3
-    name: "{{ item.name }}"
-    state: present
-    version: "{{ item.version }}"
-  with_items:
-    - {"name": "docker-py", version: "1.10.6"}
+- include_tasks: noarch.yml
