--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+cache: pip
 install:
   - wget -O /tmp/packer.zip "https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_amd64.zip"
   - sudo unzip -o /tmp/packer.zip -d /usr/local/bin
