--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -1,7 +1,10 @@
 ---
 
-- become: yes
-  hosts: all
-  roles:
-    - awx
-    - geerlingguy.docker
+- hosts: all
+  tasks:
+    - include_role:
+        name: awx
+    - include_role:
+        apply:
+          become: yes
+        name: geerlingguy.docker
