--- a/provisioning/roles/awx/tasks/debian.yml
+++ b/provisioning/roles/awx/tasks/debian.yml
@@ -17,7 +17,7 @@
   apt:
     name:
       - nodejs
-      - python3-pip
+      - python-pip
     state: present
     update_cache: yes
   become: yes
