Update awx role
- Write systemd unit file for awx
- Use Docker Compose to manage awx services

--- a/provisioning/roles/awx/tasks/debian.yml
+++ b/provisioning/roles/awx/tasks/debian.yml
@@ -21,3 +21,9 @@
     state: present
     update_cache: yes
   become: yes
+
+- name: Copy the awx unit file
+  copy:
+    dest: /etc/systemd/system/awx.service
+    src: awx.service
+  become: yes
