--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 cache: pip
 install:
   - wget -O /tmp/packer.zip "https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_amd64.zip"
+  - wget -O /tmp/terraform.zip "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
   - sudo unzip -o /tmp/packer.zip -d /usr/local/bin
+  - sudo unzip -o /tmp/terraform.zip -d /usr/local/bin
   - pip install ansible-lint
 language: python
 python:
