Convert inventory file to a Jinja template

--- a/provisioning/roles/awx/tasks/noarch.yml
+++ b/provisioning/roles/awx/tasks/noarch.yml
@@ -27,7 +27,7 @@
   become: yes
 
 - name: Copy the awx inventory file
-  copy:
+  template:
     dest: /etc/ansible/hosts
     src: inventory
   become: yes
